--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
     "jquery": "1.10.2",
+    "jquery-ui-bootstrap": "0.2.5",
     "bootstrap": "3.3.6"
   }
 }
