--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "html5-boilerplate": "^5.3.0",
     "jquery": "1.10.2",
     "jquery-ui-bootstrap": "0.2.5",
-    "bootstrap": "3.3.6"
+    "bootstrap": "3.3.6",
+    "bootstrap-switch": "3.3.2",
+    "bootstrap-material-design": "0.5.10"
   }
 }
