--- a/package.json
+++ b/package.json
@@ -14,8 +14,21 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
-    "protractor": "^3.2.2"
+    "protractor": "^3.2.2",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-css-condense": "^1.1.2",
+    "gulp-css-url-adjuster": "^0.2.3",
+    "gulp-cssbeautify": "^0.1.3",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-gzip": "^1.2.0",
+    "gulp-less": "^3.0.5",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.1"
   },
+  "main": "gulpfile.js",
   "scripts": {
     "postinstall": "bower install",
 
